Self registering on it's way

--- a/examples/import-template.html
+++ b/examples/import-template.html
@@ -10,7 +10,7 @@
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <snuggsi-header>
-  <link rel=import href=snuggsi-header.html>
+  <link onload=onwtf rel=import href=snuggsi-header.html>
 
   <h2 slot=header>My Own Header</h2>
 </snuggsi-header>
