--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -1,19 +1,19 @@
+<title>snuggsi ツ - Header Group</title>
+
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
-<title>snuggsi ツ - Infinity Calendar</title>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link id=snuggi-header rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
 <script nomodule    src=../dist/snuggsi.es></script>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<snuggsi-header>
-  <link onload=onwtf rel=import href=snuggsi-header.html>
-
+<link rel=import href=header-group.html>
+<header-group>
   <h2 slot=header>My Own Header</h2>
-</snuggsi-header>
+</header-group>
 
 <script src=../../vendor/browser-sync.es></script>
 
