--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -1,4 +1,3 @@
-
 <template id=snuggsi-header>
   <style>
     :root { border: 1px solid green; }
@@ -21,16 +20,13 @@ Element `header-group`
   }
 
   initialize () {
-    console.log ('foo')
     const tag = `header-group`
     const selector = `link[href='${tag}.html']`
-
-    console.log (selector)
 
     const link = document.querySelector (selector)
 
     link.onload = this.constructor.onwtf
-    console.log (link.import.querySelector ('template'))
+    link.import.querySelector ('template')
   }
 
 })
