--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -1,4 +1,4 @@
-<template id=snuggsi-header>
+<template id=header-group>
   <style>
     :root { border: 1px solid green; }
     hgroup { display: block; width: 100%; }
@@ -26,7 +26,7 @@ Element `header-group`
     const link = document.querySelector (selector)
 
     link.onload = this.constructor.onwtf
-    link.import.querySelector ('template')
+    const template = link.import.querySelector ('template')
   }
 
 })
