--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -16,5 +16,9 @@
   <h2 slot=header>My Own Header</h2>
 </header-group>
 
+<header-group>
+  <h2 slot=header>MrBernnz & Snuggsi Header</h2>
+</header-group>
+
 <script src=../../vendor/browser-sync.es></script>
 
