--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -12,11 +12,11 @@
 
 <link rel=import href=header-group.html>
 
-<header-group>
+<header-group bar>
   <h2 slot=header>My Own Header</h2>
 </header-group>
 
-<header-group>
+<header-group foo>
   <h2 slot=header>MrBernnz & Snuggsi Header</h2>
 </header-group>
 
