Ensure import works inline body

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -10,8 +10,6 @@
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<link rel=import href=header-group.html>
-
 <header-group bar>
   <h2 slot=header>My Own Header</h2>
 </header-group>
@@ -19,6 +17,9 @@
 <header-group foo>
   <h2 slot=header>MrBernnz & Snuggsi Header</h2>
 </header-group>
+
+<! -- import works inline body -->
+<link rel=import href=header-group.html>
 
 <script src=../../vendor/browser-sync.es></script>
 
