--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -10,11 +10,13 @@
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<header-group bar>
+<header-group></header-group>
+
+<header-group>
   <h2 slot=header>My Own Header</h2>
 </header-group>
 
-<header-group foo>
+<header-group>
   <h2 slot=header>MrBernnz & Snuggsi Header</h2>
 </header-group>
 
