Remove id=snuggsi-header (@mrbernnz this is what confused you)

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<link id=snuggi-header rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
 <script nomodule    src=../dist/snuggsi.es></script>
