Use HTML entity for ampersand

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -17,7 +17,7 @@
 </header-group>
 
 <header-group>
-  <h2 slot=header>MrBernnz & Snuggsi Header</h2>
+  <h2 slot=header>MrBernnz &amp; Snuggsi Header</h2>
 </header-group>
 
 <!-- import works inline body -->
