@brandondees Removing `.html` file extension assumption.
Theoretically following resources should work for dynamic scripts:
`<link rel=import href=//example.com/foo-bar>`
`<link rel=import href=//example.com/foo-bar.html>`
`<link rel=import href=//example.com/foo-bar.asp>`
`<link rel=import href=//example.com/foo-bar.foo?what=ever&baz=bat>`

/cc @mrbernnz @VicenteRD

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -67,7 +67,7 @@ Element `header-group`
   }
 
   initialize () {
-    const selector = `link#${tag}, link[href='${tag}.html']`
+    const selector = `link#${tag}, link[href*='${tag}']`
     const link = document
       .querySelector (selector)
 
