--- a/examples/flashy.html
+++ b/examples/flashy.html
@@ -2,6 +2,7 @@
 <meta name=viewport content=width=device-width,initial-scale=1>
 <title>snuggsi - Flashy</title>
 
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
 <style>
 
   body {
@@ -33,6 +34,13 @@
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+
+<header-group>
+  <h2 slot=header>Components can be as flashy as you want</h2>
+</header-group>
+<!-- import works inline body -->
+<link rel=import href=header-group.html>
+
 
 <x-flashy>
   {greeting}
