--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -2,12 +2,11 @@
 
 <style>
 
-  header-group
-    { display: block }
-
-  header-group
-    hgroup
-      { background: #bada55; color: var(--darkest-color) }
+  header-group {
+    display: block;
+    line-height: 3em;
+    border-bottom: 0.1em solid #ddd;
+  }
 
 </style>
 
