--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -22,7 +22,11 @@
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<h1>snuggsi ツ</h1>
+<header-group>
+  <h2 slot=header>Minimal is easy</h2>
+</header-group>
+<!-- import works inline body -->
+<link rel=import href=header-group.html>
 
 <hello-world>
   Hello World
