--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -17,10 +17,11 @@
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<hgroup>
-  <h1>snuggsi ツ</h1>
-  <h2>Infinity Calendar</h2>
-</hgroup>
+<header-group>
+  <h2 slot=header>Infinity Calendar</h2>
+</header-group>
+<!-- import works inline body -->
+<link rel=import href=header-group.html>
 
 http://teuxdeux.com
 
