--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -12,7 +12,12 @@
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<h1>snuggsi ツ</h1>
+<header-group>
+  <h2 slot=header>Input Output</h2>
+</header-group>
+<!-- import works inline body -->
+<link rel=import href=header-group.html>
+
 
 <input-output>
 
