Refacor markup order for examles/header-group.html

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -1,13 +1,16 @@
+<script>
+  Element `header-group`
+</script>
+
 <template>
 
 <style>
 
-  header-group {
-    display: block;
-    line-height: 3em;
-    border-bottom: 0.1em solid #ddd;
-  }
-
+header-group {
+  display: block;
+  line-height: 3em;
+  border-bottom: 0.1em solid #ddd
+}
 </style>
 
 <hgroup>
@@ -16,8 +19,4 @@
 </hgroup>
 
 </template>
-
-<script>
-  Element `header-group`
-</script>
 
