Use upstreamed snuggsi version

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -6,7 +6,8 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
-<script nomodule    src=../dist/snuggsi.es></script>
+<script nomodule src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
