--- a/examples/index.html
+++ b/examples/index.html
@@ -33,6 +33,9 @@
       <a href=hello-world.html>Hello World</a>
     </li>
     <li>
+      <a href=link-import.html>Simple Template Import</a>
+    </li>
+    <li>
       <a href=flashy.html>flashy</a>
     </li>
     <li>
