--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -11,9 +11,12 @@
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
+<!-- defaults can be supplied -->
 <header-group></header-group>
 
+<!-- slots let you map content to template output -->
 <header-group>
+  <p slot=subheader>slots control output arrangement</p>
   <h2 slot=header>My Own Header</h2>
 </header-group>
 
