--- a/examples/index.html
+++ b/examples/index.html
@@ -61,6 +61,9 @@ console.log ('module')
   <li>
     <a href=/examples/party-line.html>&lt;party-line&gt;</a>
 
+  <li>
+    <a href=file-upload.html>file-upload</a>
+
 </ul>
 
 <script src=../../vendor/browser-sync.es></script>
