--- a/examples/index.html
+++ b/examples/index.html
@@ -62,7 +62,7 @@ console.log ('module')
     <a href=/examples/party-line.html>&lt;party-line&gt;</a>
 
   <li>
-    <a href=file-upload.html>file-upload</a>
+    <a href=uploader.html>uploader</a>
 
 </ul>
 
